--- a/style.css
+++ b/style.css
@@ -1,62 +1,144 @@
+html {
+    height: 100%;
+}
+
+body {
+    background-image: linear-gradient(#F2994A, #F2C94C);
+    font-family: 'roboto';
+    color: #fff;
+    font-size: 1.25rem;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
 .container {
-    width: 1024px;
-    background-color: blueviolet;
-    min-height: 300px;
+    width: 64rem;
+    min-height: 18.75rem;
     margin-left: auto;
     margin-right: auto;
 }
 
 header {
-    background: rgb(182, 163, 201);
-    min-height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
 }
 
+.nav-links li {
+    margin-top: 0;
+    display: inline-block;
+}
+
+.nav-links a {
+    color: cornsilk;
+    text-decoration: none;
+    list-style: none;
+}
+
+
 main {
-    background-color: coral;
-    min-height: 300px;
+    min-height: 18.75rem;
     display: flex;
+    align-items: center;
 }
 
 .cards {
-    background-color: rgb(209, 160, 143);
-    min-height: 300px;
     display: flex;
     justify-content: space-between;
+    text-align: center;
+}
+
+.card1,
+.card2,
+.card3 {
+    padding: 30px 30px 20px 30px;
+    box-sizing: border-box;
 }
 
 .card1 {
+    background-image: url(img/blue-sky.jpg);
+    background-size: cover;
+    background-position: bottom;
     background-color: cornflowerblue;
-    min-height: 300px;
+    min-height: 250px;
     width: 30%;
 }
 
 .card2 {
+    background-image: url(img/sitting.jpg);
+    background-size: cover;
+    background-position: bottom;
     background-color: rgb(185, 199, 224);
-    min-height: 300px;
-
+    min-height: 250px;
     width: 30%;
 }
 
 .card3 {
+    background-image: url(img/sunset.jpg);
+    background-size: cover;
+    background-position: bottom;
     background-color: rgb(44, 66, 107);
-    min-height: 300px;
+    min-height: 250px;
     width: 30%;
 }
 
+.cards p {
+    font-size: 0.85rem;
+    line-height: 1.2rem;
+    margin-top: 10px;
+}
+
+.cards i {
+    font-size: 100px;
+}
+
+
+h1 {
+    font-size: 3.25rem;
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 1rem;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.228);
+}
+
+h2 {
+    font-size: 2rem;
+    font-family: 'Playfair Display', serif;
+    margin-top: 20px;
+}
+
+p {
+    line-height: 1.75rem;
+    margin-bottom: 0.5rem;
+}
+
+
 .herobox1 {
-    background-color: crimson;
-    width: 50%;
+    flex: 2;
+    padding-right: 100px;
+}
+
+.herobox1 p {
+    line-height: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .herobox2 {
-    background-color: rgb(220, 20, 203);
-    width: 50%;
+    flex: 1;
+}
+
+.card i {
+    font-size: 100px;
+    padding-top: 30px;
 }
 
 
-
-footer {
+/* footer {
     background-color: rgb(209, 160, 143);
     min-height: 100px;
     text-align: center;
-}
+} */
