--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html {
-    height: 100%;
-}
-
 body {
     background-image: linear-gradient(rgb(16, 184, 175), rgb(212, 196, 147));
     font-family: 'roboto';
@@ -12,6 +8,7 @@ body {
 a {
     color: #fff;
     text-decoration: none;
+
 }
 
 .container {
@@ -51,6 +48,7 @@ main {
     display: flex;
     justify-content: space-between;
     text-align: center;
+    margin-top: 50px;
 }
 
 .card1,
@@ -59,6 +57,8 @@ main {
     padding: 30px 30px 20px 30px;
     box-sizing: border-box;
     border-radius: 5px;
+    box-shadow: 0px 2px 2px rgb(0, 0, 0, 0.228);
+    border: 1px solid #fff;
 }
 
 .card1 {
@@ -134,6 +134,8 @@ p {
 
 .herobox2 img {
     border-radius: 5px;
+    box-shadow: 0px 2px 2px rgb(0, 0, 0, 0.228);
+    border: 1px solid #fff;
 }
 
 .card i {
@@ -141,19 +143,23 @@ p {
 }
 
 .btn {
-    color: #606060;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
+    color: rgb(16, 184, 175);
+    margin-top: 27px;
+    padding: 11px 25px;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
     background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px rgb(0, 0, 0, 0.228);
 }
 
-/* footer {
-    background-color: rgb(209, 160, 143);
-    min-height: 100px;
-    text-align: center;
-} */
+.btn-bg {
+    color: #fff;
+    border: 1px solid #fff;
+    margin-top: 27px;
+    padding: 11px 25px;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px rgb(0, 0, 0, 0.228);
+}
